assets/css/style.css
body{
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

/****************************** Header styling ***************************************/
h2{   
    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
     color: black;
     font-weight: 800;
}

h2:hover{
    color: rgb(88, 88, 88);
}


#logo{
    float: left;
    font-size: 200%;
    margin-left: 30px;
}

#logo , #nav-links{
    line-height: 25px;
}

nav{
    font-weight: 700;
}

#nav-links{
    list-style-type:none;
    letter-spacing: 3px;
    font-family: Arial, Helvetica, sans-serif;
    opacity: 20;
}

#nav-links li{
    float:right;
    margin-right: 60px;
}

.nav-buttons{
    letter-spacing: 4px;
    color: black;
    text-decoration: none;
    font-size: 140%;
}

.active{
    border-bottom: 1.5px solid black;
}

.nav-buttons:hover{
    color: rgb(88, 88, 88);
}

/****************************** Hero image styling ***************************************/

#hero-image{
    height: 1000px;
    width: 100%;
    background: url(../images/football.jpg) no-repeat center center;

    animation-name: zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;

}

#hero-outer{
    height: 800px;
    width: 100%;
    overflow: hidden;
}

@keyframes zoom{
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.1);    
    }
}


#text-one{
    position: absolute;
    color: white;
    font-style: italic;
    letter-spacing: 3px;
    top:300px;
    left:150px;
}

#text-two{
    position: absolute;
    color: white;
    font-style: italic;
    letter-spacing: 3px;
    top: 400px;
    left: 150px;
}
/******************************footer styling ***************************************/
.footer-container{
    width: 100%;
    line-height: 20px;
}

.social-icons{
    display: flex;
    justify-content: center;

}

.social-icons a {
    text-decoration: none;
    background-color: white;
    padding: 20px;
    margin-top: 2px;
}


.social-icons a {
    font-size: 2em;
    color: black;
    opacity: 20;
    border-radius: 70%;
}
.footer-bottom {
    display: flex;
    justify-content: center;
    color: black;
    opacity: 20;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

.social-icons a:hover{
    background-color: rgb(88, 88, 88);
    transition: 0.5s;
}

/****************************** Venue site styling ***************************************/

.first-text{
    width:100%;
    float: right;
    background-color: aqua;
    text-align: center;
    padding:200px;
}

.second-text {
    width: 100%;
    float: right;
    background-color: blueviolet;
    text-align: center;
    padding: 200px;
}

.third-text {
    width: 100%;
    float: right;
    background-color: brown;
    text-align: center;
    padding: 200px;
}
/******************************footer styling ***************************************/
.footer-container {
    width: 100%;
    line-height: 20px;
}

.social-icons {
    display: flex;
    justify-content: center;

}

.social-icons a {
    text-decoration: none;
    background-color: white;
    padding: 20px;
    margin-top: 2px;
}


.social-icons a {
    font-size: 2em;
    color: black;
    opacity: 20;
    border-radius: 70%;
}

.footer-bottom {
    display: flex;
    justify-content: center;
    color: black;
    opacity: 20;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

.social-icons a:hover {
    background-color: rgb(88, 88, 88);
    transition: 0.5s;
}

